# dotfiles

./: .envrc  .gitignore  .gitmodules  .sops.yaml  CLAUDE.md  LICENSE  README.md  dprint.json  flake.nix  justfile  secrets.yaml  shell.nix  statix.toml
config/: starship.toml  user-dirs.dirs
config/atuin/: config.toml
config/bat/: config
config/carapace/: .gitignore  bridges.yaml
config/dprint/: dprint.jsonc
config/feh/: keys
config/ghostty/: README.md  config
config/git/: alias.config  config  delta.config  ignore  local.example.config  message
config/htop/: htoprc
config/mako/: config
config/niri/: .envrc  .gitignore  CLAUDE.md  config.kdl  pyproject.toml  scratchpads.schema.json  scratchpads.yaml  swayidle.conf
config/niri/niri_tools/: client.py  common.py  main.py  scratchpad.py  stream_monitor.py
config/niri/niri_tools/daemon/: __init__.py  config.py  notify.py  scratchpad.py  server.py  state.py  urgency.py
config/nushell/: .gitignore  config.nu  env.nu  hooks.nu  nufmt.nuon
config/nvim/: README.md  init.lua  lazy-lock.json
config/opencode/: .gitignore  opencode-wrapper.sh  opencode-wrapper.ts  opencode.jsonc  package.json
config/pruner/: config.toml
config/rofi/: config.rasi
config/satty/: config.toml  overrides.css
config/waybar/: claude-usage-menu.xml  colors.css  config.base.jsonc  config.jsonc  dprint.json  style.css
config/wlr-which-key/: config.yaml
config/zathura/: zathurarc
nix/home/: arch-maddy.nix
nix/hosts/: common.nix
nix/lib/: neovim.nix  zfs.nix
nix/modules/: base.nix
nix/overlays/: charles.nix  default.nix  nixgl.nix  opencode.nix
nix/package-groups/: debugging.nix  default.nix  javascript.nix  neovim.nix  niri.nix  (+2 more)
package-groups/: base.nix  default.nix  neovim.nix  shell.nix
profiles/: maddy.nix
(+150 files in other folders)
