[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "niri-tools"
version = "0.1.0"
description = "Utilities for the Niri window manager"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = []
keywords = ["niri", "wayland", "window-manager", "scratchpad"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Desktop Environment :: Window Managers",
  "Topic :: System :: Monitoring",
  "Topic :: Utilities",
]

dependencies = [
  "pyyaml>=6.0.2",
  "watchfiles>=1.1.1",
]

[project.urls]
Homepage = "https://github.com/YaLTeR/niri"
Repository = "https://github.com/YaLTeR/niri"

[project.scripts]
niri-tools = "niri_tools.main:main"

[tool.hatch.build.targets.wheel]
packages = ["niri_tools"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # Pyflakes
  "I", # isort
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long, handled by formatter
  "B008", # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.basedpyright]
include = ["niri_tools"]
exclude = ["build", "dist"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.13"
typeCheckingMode = "basic"
